feat(execution): TRON fee semantics; remove coinbase fee sink (#31)
Co-authored-by: Claude <noreply@anthropic.com>